Reducing size of 64613

--- a/thesisInitial/testing_and_cleaning_notebooks/Untitled.ipynb
+++ b/thesisInitial/testing_and_cleaning_notebooks/Untitled.ipynb
@@ -62,25 +62,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\envs\\Thesis1\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3146: DtypeWarning: Columns (7,8) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
+     ]
+    },
+    {
      "data": {
-      "text/plain": "         site_id     reading_datetime  circuit_id              monitors  \\\n0          64613  2019-01-01 00:15:00       70133           ac_load_net   \n1          64613  2019-01-01 00:15:00       58075  load_air_conditioner   \n2          64613  2019-01-01 00:15:00       58077  load_air_conditioner   \n3          64613  2019-01-01 00:15:00       70132        load_hot_water   \n4          64613  2019-01-01 00:15:00       58076         load_lighting   \n...          ...                  ...         ...                   ...   \n1269836    64613  2019-12-31 23:55:00       70173       load_powerpoint   \n1269837    64613  2019-12-31 23:55:00       70174       load_powerpoint   \n1269838    64613  2019-12-31 23:55:00       58084              load_spa   \n1269839    64613  2019-12-31 23:55:00       58085            load_stove   \n1269840    64613  2019-12-31 23:55:00       70131           pv_site_net   \n\n          energy  energy_pos  energy_neg Location  load_type  \n0        68.1369     68.1369      0.0000   Sydney  hot_water  \n1         0.5789      0.5789      0.0000   Sydney  hot_water  \n2         0.0472      0.0472      0.0000   Sydney  hot_water  \n3         0.0194      0.0194      0.0000   Sydney  hot_water  \n4         8.4467      8.4467      0.0000   Sydney  hot_water  \n...          ...         ...         ...      ...        ...  \n1269836   0.4544      0.4544      0.0000   Sydney  hot_water  \n1269837   0.2033      0.2033      0.0000   Sydney  hot_water  \n1269838   0.0072      0.0072      0.0000   Sydney  hot_water  \n1269839   0.1542      0.1542      0.0000   Sydney  hot_water  \n1269840  -0.0578      0.0000      0.0578   Sydney  hot_water  \n\n[1269841 rows x 9 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>site_id</th>\n      <th>reading_datetime</th>\n      <th>circuit_id</th>\n      <th>monitors</th>\n      <th>energy</th>\n      <th>energy_pos</th>\n      <th>energy_neg</th>\n      <th>Location</th>\n      <th>load_type</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>64613</td>\n      <td>2019-01-01 00:15:00</td>\n      <td>70133</td>\n      <td>ac_load_net</td>\n      <td>68.1369</td>\n      <td>68.1369</td>\n      <td>0.0000</td>\n      <td>Sydney</td>\n      <td>hot_water</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>64613</td>\n      <td>2019-01-01 00:15:00</td>\n      <td>58075</td>\n      <td>load_air_conditioner</td>\n      <td>0.5789</td>\n      <td>0.5789</td>\n      <td>0.0000</td>\n      <td>Sydney</td>\n      <td>hot_water</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>64613</td>\n      <td>2019-01-01 00:15:00</td>\n      <td>58077</td>\n      <td>load_air_conditioner</td>\n      <td>0.0472</td>\n      <td>0.0472</td>\n      <td>0.0000</td>\n      <td>Sydney</td>\n      <td>hot_water</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>64613</td>\n      <td>2019-01-01 00:15:00</td>\n      <td>70132</td>\n      <td>load_hot_water</td>\n      <td>0.0194</td>\n      <td>0.0194</td>\n      <td>0.0000</td>\n      <td>Sydney</td>\n      <td>hot_water</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>64613</td>\n      <td>2019-01-01 00:15:00</td>\n      <td>58076</td>\n      <td>load_lighting</td>\n      <td>8.4467</td>\n      <td>8.4467</td>\n      <td>0.0000</td>\n      <td>Sydney</td>\n      <td>hot_water</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1269836</th>\n      <td>64613</td>\n      <td>2019-12-31 23:55:00</td>\n      <td>70173</td>\n      <td>load_powerpoint</td>\n      <td>0.4544</td>\n      <td>0.4544</td>\n      <td>0.0000</td>\n      <td>Sydney</td>\n      <td>hot_water</td>\n    </tr>\n    <tr>\n      <th>1269837</th>\n      <td>64613</td>\n      <td>2019-12-31 23:55:00</td>\n      <td>70174</td>\n      <td>load_powerpoint</td>\n      <td>0.2033</td>\n      <td>0.2033</td>\n      <td>0.0000</td>\n      <td>Sydney</td>\n      <td>hot_water</td>\n    </tr>\n    <tr>\n      <th>1269838</th>\n      <td>64613</td>\n      <td>2019-12-31 23:55:00</td>\n      <td>58084</td>\n      <td>load_spa</td>\n      <td>0.0072</td>\n      <td>0.0072</td>\n      <td>0.0000</td>\n      <td>Sydney</td>\n      <td>hot_water</td>\n    </tr>\n    <tr>\n      <th>1269839</th>\n      <td>64613</td>\n      <td>2019-12-31 23:55:00</td>\n      <td>58085</td>\n      <td>load_stove</td>\n      <td>0.1542</td>\n      <td>0.1542</td>\n      <td>0.0000</td>\n      <td>Sydney</td>\n      <td>hot_water</td>\n    </tr>\n    <tr>\n      <th>1269840</th>\n      <td>64613</td>\n      <td>2019-12-31 23:55:00</td>\n      <td>70131</td>\n      <td>pv_site_net</td>\n      <td>-0.0578</td>\n      <td>0.0000</td>\n      <td>0.0578</td>\n      <td>Sydney</td>\n      <td>hot_water</td>\n    </tr>\n  </tbody>\n</table>\n<p>1269841 rows × 9 columns</p>\n</div>"
+      "text/plain": "         site_id     reading_datetime  circuit_id              monitors  \\\n0          64613  2019-01-01 00:15:00       70133           ac_load_net   \n1          64613  2019-01-01 00:15:00       58075  load_air_conditioner   \n2          64613  2019-01-01 00:15:00       58077  load_air_conditioner   \n3          64613  2019-01-01 00:15:00       70132        load_hot_water   \n4          64613  2019-01-01 00:15:00       58076         load_lighting   \n...          ...                  ...         ...                   ...   \n1269836    64613  2019-12-31 23:55:00       70173       load_powerpoint   \n1269837    64613  2019-12-31 23:55:00       70174       load_powerpoint   \n1269838    64613  2019-12-31 23:55:00       58084              load_spa   \n1269839    64613  2019-12-31 23:55:00       58085            load_stove   \n1269840    64613  2019-12-31 23:55:00       70131           pv_site_net   \n\n          energy  energy_pos  energy_neg Location  load_type  \n0        68.1369     68.1369      0.0000   Sydney  hot_water  \n1         0.5789      0.5789      0.0000      NaN        NaN  \n2         0.0472      0.0472      0.0000      NaN        NaN  \n3         0.0194      0.0194      0.0000      NaN        NaN  \n4         8.4467      8.4467      0.0000      NaN        NaN  \n...          ...         ...         ...      ...        ...  \n1269836   0.4544      0.4544      0.0000      NaN        NaN  \n1269837   0.2033      0.2033      0.0000      NaN        NaN  \n1269838   0.0072      0.0072      0.0000      NaN        NaN  \n1269839   0.1542      0.1542      0.0000      NaN        NaN  \n1269840  -0.0578      0.0000      0.0578      NaN        NaN  \n\n[1269841 rows x 9 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>site_id</th>\n      <th>reading_datetime</th>\n      <th>circuit_id</th>\n      <th>monitors</th>\n      <th>energy</th>\n      <th>energy_pos</th>\n      <th>energy_neg</th>\n      <th>Location</th>\n      <th>load_type</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>64613</td>\n      <td>2019-01-01 00:15:00</td>\n      <td>70133</td>\n      <td>ac_load_net</td>\n      <td>68.1369</td>\n      <td>68.1369</td>\n      <td>0.0000</td>\n      <td>Sydney</td>\n      <td>hot_water</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>64613</td>\n      <td>2019-01-01 00:15:00</td>\n      <td>58075</td>\n      <td>load_air_conditioner</td>\n      <td>0.5789</td>\n      <td>0.5789</td>\n      <td>0.0000</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>64613</td>\n      <td>2019-01-01 00:15:00</td>\n      <td>58077</td>\n      <td>load_air_conditioner</td>\n      <td>0.0472</td>\n      <td>0.0472</td>\n      <td>0.0000</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>64613</td>\n      <td>2019-01-01 00:15:00</td>\n      <td>70132</td>\n      <td>load_hot_water</td>\n      <td>0.0194</td>\n      <td>0.0194</td>\n      <td>0.0000</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>64613</td>\n      <td>2019-01-01 00:15:00</td>\n      <td>58076</td>\n      <td>load_lighting</td>\n      <td>8.4467</td>\n      <td>8.4467</td>\n      <td>0.0000</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1269836</th>\n      <td>64613</td>\n      <td>2019-12-31 23:55:00</td>\n      <td>70173</td>\n      <td>load_powerpoint</td>\n      <td>0.4544</td>\n      <td>0.4544</td>\n      <td>0.0000</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1269837</th>\n      <td>64613</td>\n      <td>2019-12-31 23:55:00</td>\n      <td>70174</td>\n      <td>load_powerpoint</td>\n      <td>0.2033</td>\n      <td>0.2033</td>\n      <td>0.0000</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1269838</th>\n      <td>64613</td>\n      <td>2019-12-31 23:55:00</td>\n      <td>58084</td>\n      <td>load_spa</td>\n      <td>0.0072</td>\n      <td>0.0072</td>\n      <td>0.0000</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1269839</th>\n      <td>64613</td>\n      <td>2019-12-31 23:55:00</td>\n      <td>58085</td>\n      <td>load_stove</td>\n      <td>0.1542</td>\n      <td>0.1542</td>\n      <td>0.0000</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1269840</th>\n      <td>64613</td>\n      <td>2019-12-31 23:55:00</td>\n      <td>70131</td>\n      <td>pv_site_net</td>\n      <td>-0.0578</td>\n      <td>0.0000</td>\n      <td>0.0578</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>1269841 rows × 9 columns</p>\n</div>"
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv(path.join(path_to_data, houses[0]))\n",
-    "df['Location'] = 'Sydney'\n",
-    "df['load_type'] = 'hot_water'\n",
-    "df.to_csv(path.join(path_to_data, houses[0]), index=False)\n",
-    "df = pd.read_csv(path.join(path_to_data, houses[0]))\n",
     "df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "location = df['Location'][0]\n",
+    "load_type = df['load_type'][0]\n",
+    "df.drop(columns=['Location', 'load_type'], inplace=True)\n",
+    "df.loc[0, 'Location'] = location\n",
+    "df.loc[0, 'load_type'] = load_type\n",
+    "df.to_csv(path.join(path_to_data, houses[0]), index=False)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -106,8 +129,7 @@
    "source": [
     "index = 1\n",
     "df = pd.read_csv(path.join(path_to_data, houses[index]))\n",
-    "df.drop(columns=['Unnamed: 0', 'Unnamed: 0.1'], inplace=True)\n",
-    "df.to_csv(path.join(path_to_data, houses[index]), index=False)"
+    "df\n"
    ],
    "metadata": {
     "collapsed": false,
