misc updates related to feather change

--- a/nice_notebooks/8_minimise_cost_load_estimate.ipynb
+++ b/nice_notebooks/8_minimise_cost_load_estimate.ipynb
@@ -42,16 +42,27 @@
      "output_type": "stream",
      "text": [
       "64613\n",
+      "64613_feather\n",
       "69914\n",
+      "69914_feather\n",
       "70177\n",
+      "70177_feather\n",
       "70210\n",
+      "70210_feather\n",
       "70243\n",
+      "70243_feather\n",
       "70277\n",
+      "70277_feather\n",
       "91341\n",
+      "91341_feather\n",
       "91910\n",
+      "91910_feather\n",
       "91911\n",
+      "91911_feather\n",
       "91912\n",
-      "97245\n"
+      "91912_feather\n",
+      "97245\n",
+      "97245_feather\n"
      ]
     }
    ],
@@ -71,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -99,7 +110,6 @@
     "    return next(season for season, (start, end) in seasons\n",
     "                if start <= now <= end)\n",
     "\n",
-    "sns.set()\n",
     "house_id = 64613\n",
     "load_type = 'hot_water'"
    ],
@@ -121,14 +131,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
-      "text/plain": "                       load      PV       AC  total_use  grid_import  \\\nreading_datetime                                                       \n2019-01-01 00:00:00  0.0194 -0.0733  70.0850    70.0311      70.1044   \n2019-01-01 00:05:00  0.0197 -0.0736  69.2019    69.1480      69.2216   \n2019-01-01 00:10:00  0.0192 -0.0728  66.6908    66.6372      66.7100   \n2019-01-01 00:15:00  0.0194 -0.0733  68.1369    68.0830      68.1563   \n2019-01-01 00:20:00  0.0225 -0.0742  81.0847    81.0330      81.1072   \n\n                     grid_export  \nreading_datetime                  \n2019-01-01 00:00:00          0.0  \n2019-01-01 00:05:00          0.0  \n2019-01-01 00:10:00          0.0  \n2019-01-01 00:15:00          0.0  \n2019-01-01 00:20:00          0.0  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>load</th>\n      <th>PV</th>\n      <th>AC</th>\n      <th>total_use</th>\n      <th>grid_import</th>\n      <th>grid_export</th>\n    </tr>\n    <tr>\n      <th>reading_datetime</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2019-01-01 00:00:00</th>\n      <td>0.0194</td>\n      <td>-0.0733</td>\n      <td>70.0850</td>\n      <td>70.0311</td>\n      <td>70.1044</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2019-01-01 00:05:00</th>\n      <td>0.0197</td>\n      <td>-0.0736</td>\n      <td>69.2019</td>\n      <td>69.1480</td>\n      <td>69.2216</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2019-01-01 00:10:00</th>\n      <td>0.0192</td>\n      <td>-0.0728</td>\n      <td>66.6908</td>\n      <td>66.6372</td>\n      <td>66.7100</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2019-01-01 00:15:00</th>\n      <td>0.0194</td>\n      <td>-0.0733</td>\n      <td>68.1369</td>\n      <td>68.0830</td>\n      <td>68.1563</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2019-01-01 00:20:00</th>\n      <td>0.0225</td>\n      <td>-0.0742</td>\n      <td>81.0847</td>\n      <td>81.0330</td>\n      <td>81.1072</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                    Location    load      PV       AC  total_use  grid_import  \\\n2019-01-01 00:00:00   Sydney  0.0194 -0.0733  70.0850    70.0311      70.1044   \n2019-01-01 00:05:00   Sydney  0.0197 -0.0736  69.2019    69.1480      69.2216   \n2019-01-01 00:10:00   Sydney  0.0192 -0.0728  66.6908    66.6372      66.7100   \n2019-01-01 00:15:00   Sydney  0.0194 -0.0733  68.1369    68.0830      68.1563   \n2019-01-01 00:20:00   Sydney  0.0225 -0.0742  81.0847    81.0330      81.1072   \n\n                     grid_export  \n2019-01-01 00:00:00          0.0  \n2019-01-01 00:05:00          0.0  \n2019-01-01 00:10:00          0.0  \n2019-01-01 00:15:00          0.0  \n2019-01-01 00:20:00          0.0  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Location</th>\n      <th>load</th>\n      <th>PV</th>\n      <th>AC</th>\n      <th>total_use</th>\n      <th>grid_import</th>\n      <th>grid_export</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2019-01-01 00:00:00</th>\n      <td>Sydney</td>\n      <td>0.0194</td>\n      <td>-0.0733</td>\n      <td>70.0850</td>\n      <td>70.0311</td>\n      <td>70.1044</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2019-01-01 00:05:00</th>\n      <td>Sydney</td>\n      <td>0.0197</td>\n      <td>-0.0736</td>\n      <td>69.2019</td>\n      <td>69.1480</td>\n      <td>69.2216</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2019-01-01 00:10:00</th>\n      <td>Sydney</td>\n      <td>0.0192</td>\n      <td>-0.0728</td>\n      <td>66.6908</td>\n      <td>66.6372</td>\n      <td>66.7100</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2019-01-01 00:15:00</th>\n      <td>Sydney</td>\n      <td>0.0194</td>\n      <td>-0.0733</td>\n      <td>68.1369</td>\n      <td>68.0830</td>\n      <td>68.1563</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2019-01-01 00:20:00</th>\n      <td>Sydney</td>\n      <td>0.0225</td>\n      <td>-0.0742</td>\n      <td>81.0847</td>\n      <td>81.0330</td>\n      <td>81.1072</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,9 +882,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "pycharm-16601492",
+   "name": "pycharm-113b4f9a",
    "language": "python",
-   "display_name": "PyCharm (Thesis1)"
+   "display_name": "PyCharm (Thesis)"
   },
   "language_info": {
    "codemirror_mode": {
